--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,16 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
   db:
     image: mysql:8
     container_name: mysql_db
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 1998
-      MYSQL_DATABASE: fastapi_db
+    env_file:
+      - .env
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p1998"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 5
