--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,7 +2,7 @@ name: Build, Push Docker Image, and Deploy via SSH
 
 on:
   push:
-    branches: [main]  # ✅ Updated to track `main` branch
+    branches: [main]
 
 jobs:
   docker-build-push:
@@ -21,7 +21,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-actions-demo:main-latest  # Optional: Updated tag to reflect branch
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-actions-demo:main-latest
 
   deploy-via-ssh:
     needs: docker-build-push
@@ -36,32 +36,27 @@ jobs:
           script: |
             echo "🚀 Connecting to server..."
 
-            # Stop and remove any old standalone container
             if [ "$(docker ps -aq -f name=fastapi-demo)" ]; then
               echo "🧹 Removing old standalone container..."
               docker stop fastapi-demo || true
               docker rm fastapi-demo || true
             fi
 
-            # Ensure Docker Compose plugin is installed
             if ! docker compose version &>/dev/null; then
               echo "🧩 Installing Docker Compose plugin..."
               apt update && apt install -y docker-compose-plugin
             fi
 
-            # Ensure Git is installed
             if ! command -v git &>/dev/null; then
               echo "📦 Installing Git..."
               apt update && apt install -y git
             fi
 
-            # Clean empty folder if exists
             if [ -d /opt/fastapi-logging ] && [ -z "$(ls -A /opt/fastapi-logging)" ]; then
               echo "🧹 Cleaning empty /opt/fastapi-logging..."
               rm -rf /opt/fastapi-logging
             fi
 
-            # Clone the repo via HTTPS if not already present
             if [ ! -d /opt/fastapi-logging ]; then
               echo "📁 Cloning repo from Vreij-Lal (main branch)..."
               git clone --branch main https://github.com/Vreij-Lal/infra.git /opt/fastapi-logging
@@ -73,11 +68,16 @@ jobs:
 
             cd /opt/fastapi-logging
 
+            echo "🗄️ Backing up .env if it exists..."
+            [ -f .env ] && cp .env /tmp/.env.bak
+
             echo "🔄 Pulling latest main code..."
             git fetch origin main
             git reset --hard origin/main
 
-            # Check if docker-compose.yml exists
+            echo "♻️ Restoring .env if it was backed up..."
+            [ -f /tmp/.env.bak ] && mv /tmp/.env.bak .env
+
             if [ ! -f docker-compose.yml ]; then
               echo "❌ docker-compose.yml not found. Exiting."
               exit 1
@@ -87,7 +87,7 @@ jobs:
             docker compose pull
 
             echo "🔧 Rebuilding and starting the full stack..."
-            docker compose down
+            docker compose down -v
             docker compose up -d --build
 
             echo "✅ Current running containers:"
