--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+
   db:
     image: mysql:8
     container_name: mysql_db
@@ -21,6 +22,9 @@ services:
       - .env
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./mysql-init-template.sql:/docker-entrypoint-initdb.d/mysql-init-template.sql:ro
+      - ./generate-init.sh:/docker-entrypoint-initdb.d/00-generate-init.sh:ro
+    command: /bin/bash -c "/docker-entrypoint-initdb.d/00-generate-init.sh && exec docker-entrypoint.sh mysqld"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 10s
