--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,6 @@
 version: "3.8"
 
 services:
-  fastapi:
-    build: .  # or use `image: your_image_name` if you're not building
-    container_name: fastapi
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    volumes:
-      - ./logs:/app/logs
-    depends_on:
-      db:
-        condition: service_healthy
-
   db:
     image: mysql:8
     restart: always
@@ -28,6 +15,27 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  migrate:
+    build: .
+    command: ["python", "src/scripts/run_migrations.py"]
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+
+  fastapi:
+    build: .
+    container_name: fastapi
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    volumes:
+      - ./logs:/app/logs
+    depends_on:
+      - migrate
 
   loki:
     image: grafana/loki:2.9.0
