--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,10 @@
-#old dependencies
-#fastapi>=0.111.0
-#uvicorn[standard]>=0.29.0
-
-#sqlalchemy>=2.0.30
-#pymysql==1.1.0
-#cryptography>=39.0.0
-
-#pydantic>=2.7.1
-
-#pytest==8.2.1
-#httpx==0.27.0
-
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
-
 sqlalchemy==2.0.30
 pymysql==1.1.0
 cryptography==42.0.5
-
 pydantic==2.7.1
 pytest==8.2.1
 httpx==0.27.0
+bleach==6.1.0
+slowapi==0.1.9
