--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ pytest==8.2.1
 httpx==0.27.0
 bleach==6.1.0
 slowapi==0.1.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
