--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
   loki:
     image: grafana/loki:2.9.0
     container_name: loki
+    restart: unless-stopped
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -46,17 +47,18 @@ services:
   promtail:
     image: grafana/promtail:2.9.0
     container_name: promtail
+    restart: unless-stopped
     volumes:
       - ./logs:/app/logs
       - ./promtail-config.yaml:/etc/promtail/config.yaml
     command: -config.file=/etc/promtail/config.yaml
     depends_on:
-      fastapi:
-        condition: service_healthy
+      - fastapi
 
   grafana:
     image: grafana/grafana:10.4.1
     container_name: grafana
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
