--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ slowapi==0.1.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
+pytest-mock==3.14.0
+python-dotenv==1.0.1
